Fix datepicker layout issues
Ref #

--- a/app/assets/stylesheets/renalware/datepicker.scss
+++ b/app/assets/stylesheets/renalware/datepicker.scss
@@ -1,5 +1,5 @@
-form .row .row.datepicker-wrapper {
-  margin-bottom: 10px;
+.datepicker-wrapper {
+  margin-bottom: 1rem !important;
 }
 
 .datepicker {
